Revision history for perl distribution {{$dist->name}}:

{{$NEXT}}

v1.1.1    2022-03-04 10:37:07+00:00 Europe/London
  [Bug Fix]
  - Removed unnecessary use of Const::Fast from release test.

v1.1.0    2022-03-03 16:15:39+00:00 Europe/London
  [Enhancements]
  - Switched from Exporter::Lite to Exporter.

  [Documentation]
  - Fix encoding of links in README.

  - Removed reference to Object::Serializer, since it seems to have
    disappeared from CPAN.

  - Bump copyright year.

  [Toolchain]
  - Removed Travis-CI.

  [Other]
  - Removed bad rule from MANIFEST.SKIP.

  [Tests]
  - Remove legacy author tests from xt directory.

  - Change Pod::Spelling test to use File::Slurper.

  - Report version of JSON::PP, Object::Signature and File::Slurper, if installed.

v1.0.0    2020-12-11 14:10:46+00:00 Europe/London
  [Documentation]
  - Updated notes about encodings and numification.

  - Updated copyright year.

  - Adjusted POD markup.

  [Toolchain]
  - Update .gitignore rules.

v0.2.0    2019-02-17 19:14:41+00:00 Europe/London
  [Toolchain]
  - Adapted to use Dist::Zilla/Pod::Weaver.

  - Removed use of Module::Install.

v0.1.6  2014-09-14
  [Documentation]
  - Added more details about alternative encoders.

  - Added design considerations for choosing JSON as a default
    serializer.

  - Added a note to the POD that this is for fingerprinting an object,
    and not for public-key signatures. (Thanks to the easily confused
    and pedantic anonymous commenter.)

  [Other Changes]
  - Explicit minimum Perl version in module code.

v0.1.5  2014-09-03
  [Tests]
  - Tests require Test::Differences, since some CPAN::Testers
    environments seem to be installing Test::Most without it.

  - Test::Warnings is only used for author tests.

  [Other Changes]
  - Fixed MANIFEST.SKIP rules.

v0.1.4  2014-09-02
  [Documentation]
  - Added note about alternative encoders.

v0.1.3  2014-08-16
  [Documentation]
  - Fixed typos in Changes.

  [Other Changes]